src/test/ui/associated-const/associated-const-in-trait.stderr
error[E0038]: the trait `Trait` cannot be made into an object
  --> $DIR/associated-const-in-trait.rs:9:6
   |
LL | trait Trait {
   |       ----- this trait cannot be made into an object...
LL |     const N: usize;
   |           - ...because it contains this associated `const`
...
LL | impl dyn Trait {
   |      ^^^^^^^^^ the trait `Trait` cannot be made into an object
   |
   = help: consider moving `N` to another trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
